Added memory deletion
